# flutter_ffi

./: LICENSE  README.md
ffi_normal/: .gitignore  README.md  pubspec.yaml
ffi_normal/android/: CMakeLists.txt  build.gradle  settings.gradle
ffi_normal/android/src/main/: AndroidManifest.xml
ffi_normal/android/src/main/kotlin/com/xdd/ffi_normal/: FfiNormalPlugin.kt
ffi_normal/example/: README.md  pubspec.yaml
ffi_normal/example/lib/: main.dart
ffi_normal/example/linux/: CMakeLists.txt  my_application.cc
ffi_normal/example/test/: widget_test.dart
ffi_normal/example/web/: index.html  manifest.json
ffi_normal/example/windows/: CMakeLists.txt
ffi_normal/ios/: ffi_normal.podspec
ffi_normal/ios/Classes/: FfiNormalPlugin.h  FfiNormalPlugin.m  (+1 more)
ffi_normal/lib/: ffi_normal.dart  ffi_normal_method_channel.dart  ffi_normal_platform_interface.dart  ffi_normal_web.dart
ffi_normal/lib/native/: CMakeLists.txt
ffi_normal/linux/: CMakeLists.txt  ffi_normal_plugin.cc
ffi_normal/macos/: ffi_normal.podspec
ffi_normal/test/: ffi_normal_method_channel_test.dart  ffi_normal_test.dart
ffi_normal/windows/: CMakeLists.txt  ffi_normal_plugin.cpp  ffi_normal_plugin.h  ffi_normal_plugin_c_api.cpp
rust_bridge/: .gitignore  README.md  pubspec.yaml  rust_gen.sh
rust_bridge/android/: build.gradle  gradle.properties
rust_bridge/lib/: main.dart
rust_bridge/linux/: CMakeLists.txt  my_application.cc  rust.cmake
rust_bridge/rust/: Cargo.toml
rust_bridge/test/: widget_test.dart
rust_bridge/web/: index.html  manifest.json
rust_bridge/windows/: CMakeLists.txt
(+51 files in other folders)
